<resources>
    <string name="app_name">Todo</string>
    <string name="welcome_msg">Welcome to Todo App!!</string>

    <string name="login_login">User Login</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_username_required">Username Required!!!</string>
    <string name="login_password_required">Password Required!!!</string>
    <string name="login_invalid_login">Invalid username or password!!!</string>
    <string name="login_signin">Log In</string>
    <string name="login_cancel">Cancel</string>
    <string name="quit_application">Do you want to quit Application?</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_Title">Title</string>
    <string name="edit_Description">Description</string>
    <string name="edit_date">Date</string>
    <string name="edit_priority">Priority</string>
    <string name="edit_high">High</string>
    <string name="edit_medium">Medium</string>
    <string name="edit_low">Low</string>
    <string name="edit_is_complete">Is Complete</string>
    <string name="edit_save">Save</string>
    <string name="edit_cancel_promt">Are you sure want to cancel edit?</string>
    <string name="crud_save">Todo Saved</string>
    <string name="crud_update">Todo Updated</string>
    <string name="crud_deletebyid">Swapped item is deleted.</string>
    <string name="crud_deleteall">All items deleted</string>
    <string name="edit_update">Update</string>

</resources>